# AIMarketplace

./: .gitignore
AIMPContract/: package-lock.json  truffle-config.js
AIMPContract/contracts/: AIMarketPlace.sol
AIMPContract/migrations/: 2_initial_AIMarketPlace.js
Backend/: Dockerfile  app.py  docker-compose.yaml  init-letsencrypt.sh  pyproject.toml
Backend/nginx/: Dockerfile  nginx.conf
Frontend/aimarketplace/src/component/: Application.js  Home.js
Frontend/aimarketplace/src/script/: Verifier.js
