[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ezkl = "^11.2.2"
paddlelibrosa = "^0.0.1"
librosa = "^0.10.0.post2"
setuptools = "^68.0.0"
gunicorn = "^20.1.0"
flask-cors = "^4.0.0"
pydub = "^0.25.1"
mclbn256 = "^1.3.2"
requests = "^2.31.0"
requests-toolbelt = "^1.0.0"
celery = "^5.4.0"
redis = "^5.0.4"
ffmpeg = "^1.4"
flask = {extras = ["async"], version = "^3.0.3"}
uuid = "^1.30"
py-solc-x = "^2.0.3"
asyncio = "^3.4.3"
numpy = "1.26.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
